--- a/servidor/ReporteTablas.html
+++ b/servidor/ReporteTablas.html
@@ -29,4 +29,18 @@
                     <th>Valor</th>
                     <th>Fila</th>
                     <th>Columna</th>
+                </tr>
+                <tr>
+                    <td>x</td>
+                    <td>ENTERO</td>
+                    <td>42</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>s</td>
+                    <td>DECIMAL</td>
+                    <td>S</td>
+                    <td>1</td>
+                    <td>2</td>
                 </tr></table></body></html>
