--- a/servidor/ReporteTablas.html
+++ b/servidor/ReporteTablas.html
@@ -29,4 +29,11 @@
                     <th>Valor</th>
                     <th>Fila</th>
                     <th>Columna</th>
+                </tr>
+                <tr>
+                    <td>a</td>
+                    <td>ENTERO</td>
+                    <td>24</td>
+                    <td>0</td>
+                    <td>1</td>
                 </tr></table></body></html>
