--- a/servidor/ReporteTablas.html
+++ b/servidor/ReporteTablas.html
@@ -31,9 +31,23 @@
                     <th>Columna</th>
                 </tr>
                 <tr>
-                    <td>a</td>
+                    <td>arreglo</td>
                     <td>ENTERO</td>
-                    <td>24</td>
+                    <td>2,3,5,4,6,8,1,7</td>
                     <td>0</td>
                     <td>1</td>
+                </tr>
+                <tr>
+                    <td>n</td>
+                    <td>ENTERO</td>
+                    <td>8</td>
+                    <td>1</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>i</td>
+                    <td>ENTERO</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>3</td>
                 </tr></table></body></html>
